# burger_war

./: .gitignore  Anaconda導入.md  test.sh
buger_AI/: CMakeLists.txt  package.xml
buger_AI/doc/: README.md
burger_AI/: CMakeLists.txt  package.xml
burger_AI/bash_scripts/: reset.sh  setup_sim.sh  start.sh
burger_AI/doc/: README.md
burger_AI/launch/: setup.launch  setup_enemy.launch
burger_AI/scripts/: randomBot.py  testUtility.py
burger_controller/: CMakeLists.txt  package.xml
burger_controller/launch/: my_controller.launch  self_location_estimation.launch
burger_controller/param/: base_local_planner_params.yaml
burger_controller/rviz/: rvizConfig.rviz
burger_controller/scripts/: .warStateBot.py  cv_cam2.py  my_state_listener.py  target_map.py  tmp_myState_listener.py  tmp_targetsMap.py  warStateBot.py  war_state_publisher.py
burger_ml/: CMakeLists.txt  package.xml
burger_navigation/launch/: burger_navigation.launch
burger_war/launch/: .your_burger.launch  restart_sim.launch  restart_sim_blue.launch  setup_test_run.launch  setup_test_run_empty.launch  setup_test_run_enemy.launch  setup_test_run_enemy2.launch  sim_robot_run.launch  sim_robot_run2.launch  sim_teleop.launch  your_burger.launch  your_burger_teleop.launch
burger_war/scripts/: controlBot.py  controlBot2.py  controlBot3.py  cv_cam2.py  localization.py  print2.py  print3.py  targetMapUtil.py  test#1.py  test#2.py  test#3.py  test#4.py  test#5.py  test#6.py  (+4 more)
scripts/: anaconda.sh  reset.sh  reset_test.sh  setup_test.sh  sim_with_judge.sh  start.sh  start2.sh  test_run.sh  test_run2.sh
(+7 files in other folders)
